--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,11 @@
 steps:
-- name: 'gcr.io/cloud-builders/docker'
+- name: 'ubuntu
   entrypoint: 'bash'
-  args: ['echo', '$$suchita-cloud-secrete']
+  args: ['bash', 'echo', '$$suchita-cloud-secrete']
   secretEnv: ['suchita-cloud-secrete']
 availableSecrets:
   secretManager:
   - versionName: projects/business-transformers/secrets/suchita-cloud-secrete/versions/1
     env: 'suchita-cloud-secrete'
+
+
