--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-- name: 'ubuntu
+- name: 'gcr.io/cloud-builders/gcloud'
   entrypoint: 'bash'
   args: ['bash', 'echo', '$$suchita-cloud-secrete']
   secretEnv: ['suchita-cloud-secrete']
