--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
-- name: 'ubuntu'
-  args: ['bash', 'echo', '$$suchita-cloud-secrete']
+- name: 'bash'
+  args: ['echo', '$$suchita-cloud-secrete']
   secretEnv: ['suchita-cloud-secrete']
-availableSecrets:
-  secretManager:
-  - versionName: projects/business-transformers/secrets/suchita-cloud-secrete/versions/1
-    env: 'suchita-cloud-secrete'
+#availableSecrets:
+  #secretManager:
+ # - versionName: projects/business-transformers/secrets/suchita-cloud-secrete/versions/1
+ #   env: 'suchita-cloud-secrete'
