--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
 - name: 'bash'
   args: ['echo', '$$suchita-cloud-secrete']
   secretEnv: ['suchita-cloud-secrete']
-#availableSecrets:
-  #secretManager:
- # - versionName: projects/business-transformers/secrets/suchita-cloud-secrete/versions/1
- #   env: 'suchita-cloud-secrete'
+availableSecrets:
+ secretManager:
+  - versionName: projects/business-transformers/secrets/suchita-cloud-secrete/versions/1
+    env: 'suchita-cloud-secrete'
