--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'bash'
-  args: ['echo' 'MediaAgility']
+  args: ['echo', '$MediaAgility']
   secretEnv: ['suchita-cloud']
 availableSecrets:
  secretManager:
